fixed the overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -588,8 +588,8 @@ h3 {
   }
 
   .grid-container {
-    grid-template-columns: repeat(3, auto);
-    grid-template-areas: "header header", "nav main";
+    grid-template-columns: 75px repeat(3, auto);
+    grid-template-areas: "header header" "nav main";
   }
 
   .grid-header {
